fix wide images overlap

--- a/app/styles/project.css
+++ b/app/styles/project.css
@@ -7,7 +7,7 @@ article {
 
 article img {
     width: 100%;
-    height: auto;
+    height: 100%;
 
     margin-bottom: var(--sx);
 }
